// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emphasize should show as expected 1`] = `
<strong
  class="bg-emphasize-underline from-transparent from-50% to-green-600 to-50% undefined"
>
  Koishi Komeiji
</strong>
`;

exports[`Emphasize should show as expected 2 1`] = `
<strong
  class="bg-emphasize-underline from-transparent from-50% to-green-600 to-50% to-pink-300"
>
  Hoshino Takanashi
</strong>
`;
